# gameEngine

./: BUILD.md  CMakeLists.txt  GameEngine_TODO.md  LICENSE  LICENSE_HEADER_EXAMPLES.md  README.md  build.bat  build.py  build.sh
examples/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/header/: Engine.h  Window.h
src/core/source/: Engine.cpp  window.cpp
tests/: CMakeLists.txt
