# Copyright (c) 2024 Cody Wall
# All Rights Reserved

# This is a placeholder for example projects
# You can add specific example projects here as you develop them

# Example: Simple window
# add_executable(SimpleWindow SimpleWindow.cpp)
# target_link_libraries(SimpleWindow PRIVATE GameEngine)

# Example: Basic rendering
# add_executable(BasicRendering BasicRendering.cpp)
# target_link_libraries(BasicRendering PRIVATE GameEngine)

message(STATUS "No examples configured yet. Add example projects to examples/CMakeLists.txt") 