# Copyright (c) 2024 Cody Wall
# All Rights Reserved

# This is a placeholder for test projects
# You can add specific test projects here as you develop them

# Example: Window tests
# add_executable(WindowTests WindowTests.cpp)
# target_link_libraries(WindowTests PRIVATE GameEngine)
# add_test(NAME WindowTests COMMAND WindowTests)

# Example: Renderer tests
# add_executable(RendererTests RendererTests.cpp)
# target_link_libraries(RendererTests PRIVATE GameEngine)
# add_test(NAME RendererTests COMMAND RendererTests)

message(STATUS "No tests configured yet. Add test projects to tests/CMakeLists.txt") 